Fixed the application of the BodyFixupRule so that it is only created when the BODY element has the HTML element as its parent. b=17911 r=dbaron@fas.harvard.edu